@@ -1,44 +1,32 @@
 DISTRIBUTION
 
-The following files are "client" files and should be distributed to any users (either alone or in a jar file) who you wish to be able connect to your server:
+The following files are "client" files and should be distributed to any users (either alone or in a jar file)
+who you wish to be able connect to your server:
 
-\<root folder>
-	- Run Client.bat
-	- Run Client (GUI).bat
-\org\pavlinic\chat
-	- ChatMessage.class
-\org\pavlinic\chat\client
-	- Client$ListenFromServer.class
-	- Client.class
-	- ClientGUI$1.class
-	- ClientGUI$2.class
-	- ClientGUI.class
-\docs
-	- README-CLIENT.txt
+<root folder>
+	org\pavlinic\chat\
+		- all files
+	org\pavlinic\chat\client\
+		- all files
+	docs\
+		- README-CLIENT.txt
 
 The following files are "server" files and are required to all be on the computer hosting the chat server:
 
-\<root folder>
-	- Run Server.bat
-	- Run Server (GUI).bat
-\org\pavlinic\chat
-	- ChatMessage.class
-\org\pavlinic\chat\server
-	- Server$ClientThread.class
-	- Server.class
-	- ServerBot.class
-	- ServerCommandHandler.class
-	- ServerGUI$1.class
-	- ServerGUI$2.class
-	- ServerGUI$ServerRunning.class
-	- ServerGUI.class
-	- ServerPermissionsHandler.class
-
+<root folder>
+	org\pavlinic\chat\
+		- all files
+	org\pavlinic\chat\server\
+		- all files
+	docs\
+		- README-SERVER.txt
+		
 NOTES
 
 * The GUI files could probably removed if running the client and/or server with a GUI is not desired.
-* The .bat files are scripts used to start the client/server.
-* If server commands are not desired, you MAY be able to exclude ServerCommandHandler.class, but this may result in undesired effects when a user attempts to use a command as the "command" is still trying to be passed to that file.
-* The same applies to permissions, but some commands will try and reference ServerPermissionsHandler.class so that may also cause issues if removed.
+* If server commands are not desired, you MAY be able to exclude CommandHandler.class, but this may
+  result in undesired effects when a user attempts to use a command as the "command" is still trying to be passed to that file.
+* The same applies to permissions, but some commands will try and reference PermissionsHandler.class
+  so that may also cause issues if removed.
 
-Last updated: 10:18 PM 4/29/2012
+Last updated: 9:29 PM 5/1/2013
